Fix mobile not showing full height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.very-bottom {
-  position:absolute;
-  top:100vh;
-  transform:translateY(-100%);
-  width:100%;
+main {
+  height: 100svh;
 }
